--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628408.md#1" title="美核安全局网络遭APT黑客入侵 影响6机构""><img width="73" src="https://i.epochtimes.com/assets/uploads/2008/12/812101600362037-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629029.md#1" title="当选参议员有意挑战选举人团 川普回应""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1229555811-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vsrhmu3414.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631228.md#1">【横河直播】司法立法途穷 川普如何破阵？</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631149.md#1">传亨特曾问会计：我进监狱后收入是多少？</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630942.md#1">读纳瓦罗分析民主党2020窃选策略：“千伤致命”</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631167.md#1">川普：准备分发Moderna疫苗 再向欧洲提供</a><br>
+:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631228.md#1">【横河直播】司法立法途穷 川普如何破阵？</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631149.md#1">传亨特曾问会计：我进监狱后收入是多少？</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630942.md#1">纳瓦罗：民主党2020窃选策略——“千伤致命”</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631165.md#1">蓬佩奥：美成功研发疫苗 中共仍在散布假信息</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/8/n12602692.md#1">美国海军到底多强 五个方面即可了解</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631111.md#1">委内瑞拉选举舞弊 美制裁选举系统公司及高管</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629245.md#1">【翻墙必看】首席大法官罗伯茨被曝丑闻</a><br>
