--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,19 +13,19 @@
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628408.md#1" title="美核安全局网络遭APT黑客入侵 影响6机构""><img width="73" src="https://i.epochtimes.com/assets/uploads/2008/12/812101600362037-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629029.md#1" title="当选参议员有意挑战选举人团 川普回应""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1229555811-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vsrhmu3414.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631167.md#1">川普：准备分发Moderna疫苗 再向欧洲提供</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631228.md#1">【横河直播】司法立法途穷 川普如何破阵？</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631149.md#1">传亨特曾问会计：我进监狱后收入是多少？</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630942.md#1">纳瓦罗：民主党2020窃选策略——“千伤致命”</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631165.md#1">蓬佩奥：美成功研发疫苗 中共仍在散布假信息</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/8/n12602692.md#1">美国海军到底多强 五个方面即可了解</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631244.md#1">【珍言真语】曾铮：美制度根基遭中共腐化</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631167.md#1">川普：准备分发Moderna疫苗 再向欧洲提供</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631228.md#1">【横河直播】司法立法途穷 川普如何破阵？</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631149.md#1">传亨特曾问会计：我进监狱后收入是多少？</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630942.md#1">纳瓦罗：民主党2020窃选策略——“千伤致命”</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631165.md#1">蓬佩奥：美成功研发疫苗 中共仍在散布假信息</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629245.md#1">【翻墙必看】首席大法官罗伯茨被曝丑闻</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628632.md#1">中共称接回7万人 网友打脸：天价机票回国难</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12626544.md#1">【翻墙必看】大陆多省市强制限电停工</a><br>
-<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12626403.md#1">大陆宣布明年将进口至少1亿支德国疫苗</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630478.md#1">代理防长暂停与拜登团队过渡？国防部回应</a><br>
+<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12626403.md#1">大陆宣布明年将进口至少1亿支德国疫苗</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12626970.md#1">北大学者：大陆失业人口已达一亿</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12626630.md#1">马云任校长的湖畔大学 其云南分校招标被终止</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628055.md#1">内蒙老巢被整肃 刘云山突随习足迹访潮汕</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 369,581,902 人
+!共 369,582,611 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
