--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,9 +13,9 @@
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629629.md#1" title="选举人团对决 在国会联席会议能翻盘吗？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/A4-4-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628408.md#1" title="美核安全局网络遭APT黑客入侵 影响6机构""><img width="73" src="https://i.epochtimes.com/assets/uploads/2008/12/812101600362037-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vsrhmu3414.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631030.md#1">【新闻看点】民主党背水战 国防部暂停拜登过渡</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631244.md#1">【珍言真语】曾铮：美制度根基遭中共腐化</a><br>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631167.md#1">川普：准备分发Moderna疫苗 再向欧洲提供</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631030.md#1">【新闻看点】民主党背水战 国防部暂停拜登过渡</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631244.md#1">【珍言真语】曾铮：美制度根基遭中共腐化</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631167.md#1">川普：准备分发Moderna疫苗 再向欧洲提供</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631228.md#1">【横河直播】司法立法途穷 川普如何破阵？</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631149.md#1">传亨特曾问会计：我进监狱后收入是多少？</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630942.md#1">纳瓦罗：民主党2020窃选策略——“千伤致命”</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 369,583,802 人
+!共 369,585,131 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
