--- a/gb/nf3046.md
+++ b/gb/nf3046.md
@@ -22,6 +22,7 @@
 <tr><td width="742"><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/1/n12588596.md#1" target="_blank">新泽西汽车游行传真相 吁美国人远离中共</a><br></h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/1/n12588596.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/car-parade-team-one-3-150x120.jpg" align ="left"></a>11月28日的周六，是美国传统节日感恩节的长周末。部分新泽西法轮功学员无暇与家庭团聚或陪伴家人购物，在这个转瞬即逝的历史时刻继续进行汽车游行传播真相，呼吁美国民众远离中共。
 
 新泽西自发成立了两组游行车队。第一队一大早赶到特拉华州（Delaware）的威明顿市（Wilmington），和当地的法轮功学员汇合后，组成了近20辆车的车队，一起在威明顿市和附近.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月02日 9:36 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631492.md#1" target="_blank">三退声明精选（2020/12/18）</a><br></h3>我们90后一代从小就被课本、影视作品、新闻媒体等渠道洗脑，导致误以为中共真如其谎称的一般“为人民服务”，在大学时期更是被发展为党员，我的入党推荐人是我的大学班主任，作为一名基层党员，她正直人格让我误以为中共确确实实是个先进集体。但是踏上社会后才看清中共的丑恶嘴脸和受黄俄文化侵染而导致的道德沦丧。为了复兴传统，恢覆信仰，重拾道德，我决意与其划清界限。也希望众多.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月19日 11:54 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629016.md#1" target="_blank">三退声明精选（2020/12/17）</a><br></h3>2019年12月在网易新闻看到ccp肺炎消息一直关注，经过网友介绍后翻墙看真实的新闻才了解到中共这么邪恶与假。大陆沦陷在ccp谎言与洗脑中，经过十多个月翻墙终于醒了。在这个至暗时刻点亮自我心中光明，自由的信仰，消失ccp邪魔迎接中华大陆人民的自由与光明。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月18日 10:43 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12626259.md#1" target="_blank">三退声明精选（2020/12/16）</a><br></h3>本人声明退出中国共产党所属的相关组织，我完全退出曾经被强制加入的少先队，我强烈谴责中国共产党的人权问题，我强烈抗议中国共产党对宗教发展的种种打压，我不再拥护共产党的黑暗统治，不再信仰马克思主义，不再对共产主义有任何的好感。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月17日 10:25 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/15/n12621234.md#1" target="_blank">三退声明精选（2020/12/14）</a><br></h3>一直身为优秀学生被进行共产教育，不知道历史的真相，也没有慎重思考过。当过去种种事实被揭露时，大为骇然。为遇难的同胞落泪，为牺牲的勇士扼腕。正式声明，退党、退团、退少先队！从今之后，一心向善向美，拥抱自由！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月15日 11:04 AM							</td></tr>
@@ -42,10 +43,5 @@
 <tr><td width="742"><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/2/n12589397.md#1" target="_blank">三退声明精选（2020/12/01）</a><br></h3>共匪强占百姓土地，强制洗脑，建防火墙大数据监控每个人，随意拘捕杀害平民，施病毒伤害世界人民，罪恶滔天！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月02日 11:01 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/1/n12587171.md#1" target="_blank">三退声明精选（2020/11/30）</a><br></h3>今天的中国人几乎都是在中共的谎言毒害中长大，中共的谎言是一个巨大的谎言体系，把中国人和真理、真相隔离开，因为中共是一个反宇宙的魔鬼，它必须营造出这样一个环境它才能控制人，把人变成它的工具和奴隶。我们声明退出这个魔鬼组织 ，做一个灵魂自由的人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月01日 12:24 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/11/30/n12584236.md#1" target="_blank">三退声明精选（2020/11/29）</a><br></h3>我声明退出曾经加入的少先队和团。中共是窃国贼，毁了中华五千年的文明，变异了现代的中国人，如今还要把全人类带向地狱，我们要发出正义的声音，天灭中共！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月30日 11:04 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/11/28/n12582248.md#1" target="_blank">王友群：中共高级特工王超北被中共关押17年</a><br></h3>王超北与潘汉年齐名，是中共最著名的两个“高级特工”，素有“南潘北王”之称。
-
-毛泽东曾称赞说：“庞智（王超北的化名）是无名英雄”。中共元帅贺龙在一次会议上称赞王超北，“他的一个情报，抵得上一个师！”
-王超北被关押17年零9天
-1962年9月20日下午3点左右，王超北到北京医院探望他30年代在上海中央特科工作时的老领导王世英后，刚走出医院大门，就被两个.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月29日 8:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046.md#1<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vsrhmu3414/djy/blob/master/gb/nf3046.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046.htm">https://www.epochtimes.com/gb/nf3046.htm</a>    （国内需<a href="https://github.com/vsrhmu3414/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
