--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -16,7 +16,7 @@
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678707.md#1" target="_blank">【疫情更新1.10】国会医生警告议员恐已触病毒</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678707.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/US-capitol-edited-700x420-600x400-1-150x120.jpg" align ="left"></a>截止到2021年1月10日，全球纪录了9014万人确诊感染中共病毒（武汉肺炎，新冠状病毒，Covid-19),193.5万人病故。美国周六通报了24.9万起确诊病例，另外，3235人死亡。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 10:06 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678951.md#1" target="_blank">印尼航班坠海 当局已确认黑匣子位置</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678951.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1295594228-150x120.jpg" align ="left"></a>周六（1月9日），一架载有62人印尼三佛齐航空（Sriwijaya Air）班机从首都雅加达起飞不久后坠海。当局已经确定了飞机黑匣子的位置，同时搜救人员已经打捞到部分人体残骸和疑似飞机碎片。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 9:22 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678588.md#1" target="_blank">石家庄新增11个中风险区 重启第二轮检测</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678588.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230473914-150x120.jpg" align ="left"></a>1月10日，河北石家庄新增4个疫情中风险区后，又新增7个中风险区。黑龙江绥化市望奎县一孕妇染疫，所在县村屯封控、涉事医院停诊。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 8:03 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678286.md#1" target="_blank">【更新】哈佛专家：弹劾川普是违宪行为</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678286.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1197517064-150x120.jpg" align ="left"></a>美国大选舞弊和1月6日美国国会大厦发生暴力事件，引发全球关注。目前事情仍在继续发酵中，主流社交媒体巨头开始封杀川普（特朗普）总统和保守派言论。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 8:00 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678286.md#1" target="_blank">【1.10更新】哈佛专家：弹劾川普是违宪行为</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678286.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1197517064-150x120.jpg" align ="left"></a>美国大选舞弊和1月6日美国国会大厦发生暴力事件，引发全球关注。目前事情仍在继续发酵中，主流社交媒体巨头开始封杀川普（特朗普）总统和保守派言论。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 8:00 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677075.md#1" target="_blank">中共如何用微信在美审查言论 华人揭真相</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677075.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/000_8Q96Z7-150x120.jpg" align ="left"></a>一些北美用户已经发现他们使用微信时，分享的内容遭到中共审查而被屏蔽。曾经历被审查的在美华人表示，微信是一座监狱，是古拉格，是影响社会各个层面的木马。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 6:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677894.md#1" target="_blank">传拜登上任后 北京计划派杨洁篪快速赴美</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677894.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230277095-1-150x120.jpg" align ="left"></a>美国媒体《华尔街日报》近日报导引述中方官员的消息称，北京方面计划在当选总统乔·拜登（Joe Biden）宣誓就职后不久，派遣最高级别外交官员杨洁篪前往华盛顿，探讨中美两国合作。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 1:50 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678349.md#1" target="_blank">围剿川粉？Amazon将关Parler服务器</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678349.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1157403467-150x120.jpg" align ="left"></a>继谷歌、苹果从各自应用程序商店下架倍受川普（特朗普）支持者欢迎的社交媒体应用程序Parler后，Parler的CEO周六（1月9日）晚表示，亚马逊将在周日关闭Parler的服务器。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 12:14 PM							</td></tr>
