--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -27,14 +27,7 @@
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/30/n12653736.md#1" target="_blank">【命理】应享福或应受苦 命中有定数</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/30/n12653736.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/a6155cd0ac42d2439b09d6c4d78d34ef-150x120.png" align ="left"></a>倪瞎子向神抱怨：“我本是世家大族，却如此饥寒。真的是天之无眼，神之不灵也。”结果如何呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月09日 8:56 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/1/n12660244.md#1" target="_blank">鸡鸣晓月窑家墟（2）</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/1/n12660244.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/1709032223592483-150x120.jpg" align ="left"></a>屈指算来，疯子振家若还活着，今年也该有60多、快70岁了吧。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月09日 5:00 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12675954.md#1" target="_blank">新诗：无伴奏组曲</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12675954.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2006/10/610081035401457-150x120.jpg" align ="left"></a>这小小的美丽岛屿 千万年来伫立在婆娑之海 日日仰望着碧蓝的苍穹 唱着属于自己的歌......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月09日 12:12 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/7/n12673611.md#1" target="_blank">你是我的诗</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/7/n12673611.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/Birds-and-Flowers-600-150x120.jpg" align ="left"></a>给我一些字
-我把它们组成词
-给我一些词
-我写成句
-给我一些句子
-我就作成诗
-给我一些诗
-我就会找到  你......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月09日 12:07 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12681231.md#1" target="_blank">七绝：正义归来（三首）</a><br></h3>正义迟来定会来， 良知月下莫徘徊。 劈开铁幕看真相， 神佑川翁复上台！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月11日 11:11 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677686.md#1" target="_blank">诗歌：守护</a><br></h3>守护自由人挺川， 人潮汹涌起惊澜。 喊声震碎强权梦， 民怨沸腾国会山。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月11日 12:11 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677680.md#1" target="_blank">西江月．撕裂</a><br></h3> 左派阴推共产，红魔渗透金钱。 潜摧正统许多年，小鬼人间作乱。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 9:12 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/7/n12673802.md#1" target="_blank">神韵行（五十）康熙皇朝</a><br></h3>一生心与万民同， 夙夜孜劳缔造功。 率土恩承三德乂， 普天绮散八旗风。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 12:10 AM			</td></tr>
