--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -17,7 +17,7 @@
 <tr><td><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/19/3/29/n11149827.md#1" target="_blank">远离脑中风 吃对食物还不够！医师揭饮食关键</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/19/3/29/n11149827.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/03/naozhongfengyinshi-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678157.md#1" target="_blank">心脏骤停有3症状 2招急救防猝死！急救方法全图解</a><br></h3>
-<h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/4/n12666916.md#1" target="_blank">【线上活动】男人如何守护前列腺？</a><br></h3>
+<h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12681302.md#1" target="_blank">这种腰痛是结石在作怪！5关键告别结石和疼痛</a><br></h3>
 <h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/6/n12669652.md#1" target="_blank">保健品挑选秘诀大公开！教你2重点看懂包装</a><br></h3>
 <h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/6/n12671527.md#1" target="_blank">胃弱、胃溃疡有3原因 中医食疗方养好胃还降糖</a><br></h3>
 <h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/7/n12672192.md#1" target="_blank">冬令进补四神汤最养生 正确炖煮才有效</a><br></h3>
